  consumed like any other encoder (instead of the number of bytes).

- Issue #2422: When compiled with the ``--with-valgrind`` option, the
  pymalloc allocator will be automatically disabled when running under
  Valgrind.  This gives improved memory leak detection when running
  under Valgrind, while taking advantage of pymalloc at other times.

Library
-------

- Issue #1923: Fixed the removal of meaningful spaces when PKG-INFO is 
  generated in Distutils. Patch by Stephen Emslie.

- Issue #4120: Drop reference to CRT from manifest when building extensions with
  msvc9compiler.

- Issue #7333: The `posix` module gains an `initgroups()` function providing
  access to the initgroups(3) C library call on Unix systems which implement
  it.  Patch by Jean-Paul Calderone.

- Issue #7408: Fixed distutils.tests.sdist so it doesn't check for group
  ownership when the group is not forced, because the group may be different
  from the user's group and inherit from its container when the test is run.

- Issue #1515: Enable use of deepcopy() with instance methods.  Patch by
  Robert Collins.

- Issue #7403: logging: Fixed possible race condition in lock creation.

- Issue #6845: Add restart support for binary upload in ftplib.  The
  `storbinary()` method of FTP and FTP_TLS objects gains an optional `rest`
  argument.  Patch by Pablo Mouzo.

- Issue #5788: `datetime.timedelta` objects get a new `total_seconds()`
  method returning the total number of seconds in the duration.  Patch by
  Brian Quinlan.

- Issue #6615: logging: Used weakrefs in internal handler list.

- Issue #1488943: difflib.Differ() doesn't always add hints for tab characters

- Issue #6123: tarfile now opens empty archives correctly and consistently
  raises ReadError on empty files.

- Issue #7354: distutils.tests.test_msvc9compiler - dragfullwindows can
  be 2.

- Issue #5037: Proxy the __unicode__ special method instead to __unicode__
  instead of __str__.
